--- a/css/main.css
+++ b/css/main.css
@@ -13,6 +13,8 @@
   --light-grayish-cyan-2: hsl(189, 41%, 97%);
   --white: hsl(0, 0%, 100%);
 
+  --orange-warning: rgba(229,151,0,255);
+
 
   /*** Font sizings ***/
   font-size: 24px;
