--- a/css/styles.css
+++ b/css/styles.css
@@ -1,3 +1,7 @@
+main {
+  padding-bottom: var(--space-xl);
+}
+
 h1 {
   color: var(--very-dark-cyan);
   text-align: center;
@@ -46,23 +50,40 @@ input::-webkit-inner-spin-button {
   margin: 0;
 }
 
+
 .input__warning-info {
   display: inline-block;
-  position: absolute;
-  opacity: 0;
+  opacity: 1;
   width: 100%;
-  top: 55px;
   text-align: right;
   color: var(--orange-warning);
   transition: all 200ms;
 }
 
-.input:focus {
-  outline: 2px solid var(--orange-warning) !important;
+
+.bill .input__warning-info,
+.number-of-people .input__warning-info {
+  position: absolute;
+  top: 55px;
 }
 
 
-.input::placeholder {
+.select-tip .input__warning-info {
+  margin-top: 5px;
+}
+
+
+input:focus {
+  outline: 3px solid var(--strong-cyan);
+  background-color: var(--light-grayish-cyan-2);
+  transition: all 200ms;
+}
+
+.input__warning-outline {
+  outline: 3px solid var(--orange-warning);
+}
+
+input::placeholder {
   opacity: 0.2;
 }
 
@@ -74,6 +95,7 @@ input::-webkit-inner-spin-button {
 }
 
 .subcard {
+  position: relative;
   margin-bottom: var(--space-xl);
 }
 
@@ -94,18 +116,32 @@ input::-webkit-inner-spin-button {
   font-weight: 700;
 }
 
+.button--tip-percentage:hover {
+  background-color: var(--light-grayish-cyan-1);
+  color: var(--very-dark-cyan);
+}
+
 .button--tip-percentage {
-  flex-basis: 130px;
-  flex-grow: 1;
+  flex: 1 1 130px;
   background-color: var(--very-dark-cyan);
   color: var(--white);
   font-size: var(--text-md);
   transition: all 200ms;
 }
 
-.button--tip-percentage--enabled {
-  background-color: var(--strong-cyan);
+.button--tip-custom {
+  flex: 1 1 130px;
+  background-color: var(--light-grayish-cyan-2);
   color: var(--very-dark-cyan);
+  width: inherit;
+  min-width: 0;
+  font-size: var(--text-md);
+  transition: all 200ms;
+}
+
+.button--tip-percentage--enabled {
+  background-color: var(--strong-cyan) !important;
+  color: var(--very-dark-cyan) !important;
 }
 
 
@@ -119,9 +155,11 @@ input::-webkit-inner-spin-button {
   transition: all 200ms;
 }
 
+
 .button--reset:hover {
   cursor: not-allowed;
 }
+
 
 
 .button--reset--enabled {
@@ -194,8 +232,8 @@ input::-webkit-inner-spin-button {
   }
 
   h1 {
-    padding-top: var(--space-xxxl);
-    padding-bottom:  var(--space-xxl);
+    padding-top: var(--space-xl);
+    padding-bottom:  var(--space-xl);
   }
 
   .summary {
