--- a/css/styles.css
+++ b/css/styles.css
@@ -116,10 +116,7 @@ input::placeholder {
   font-weight: 700;
 }
 
-.button--tip-percentage:hover {
-  background-color: var(--light-grayish-cyan-1);
-  color: var(--very-dark-cyan);
-}
+
 
 .button--tip-percentage {
   flex: 1 1 130px;
@@ -156,11 +153,7 @@ input::placeholder {
 }
 
 
-.button--reset:hover {
-  background-color: var(--light-grayish-cyan-1);
-  color: var(--very-dark-cyan);
-  cursor: not-allowed;
-}
+
 
 
 
@@ -169,9 +162,7 @@ input::placeholder {
   opacity: 1;
 }
 
-.button--reset--enabled:hover {
-  cursor: pointer;
-}
+
 
 .summary {
   background-color: var(--very-dark-cyan);
@@ -210,6 +201,28 @@ input::placeholder {
   display: block;
   font-size: var(--text-xxl);
 }
+
+
+
+@media (hover:hover) {
+  .button--reset--enabled:hover {
+    cursor: pointer;
+  }
+
+  .button--reset:hover {
+    background-color: var(--light-grayish-cyan-1);
+    color: var(--very-dark-cyan);
+    cursor: not-allowed;
+  }
+
+  .button--tip-percentage:hover {
+    background-color: var(--light-grayish-cyan-1);
+    color: var(--very-dark-cyan);
+  }
+
+}
+
+
 
 @media (min-width: 1400px) {
   .card {
