--- a/scss/main.scss
+++ b/scss/main.scss
@@ -1,8 +1,8 @@
 @import "helpers/variables";
 @import "global";
 @import "components/button";
+@import "components/input";
 @import "layout/card";
-@import "layout/card/card__userData";
-@import "layout/card/card__results";
+@import "layout/card/userData";
+@import "layout/card/results";
 @import "layout/header";
-@import "components/inputArea";
