--- a/scss/main.scss
+++ b/scss/main.scss
@@ -1,8 +1,8 @@
-@import "helpers/variables";
-@import "global";
-@import "components/button";
-@import "components/input";
-@import "layout/card";
-@import "layout/card/userData";
-@import "layout/card/results";
-@import "layout/header";
+@use "helpers/variables";
+@use "global";
+@use "components/button";
+@use "components/input";
+@use "layout/card";
+@use "layout/card/userData";
+@use "layout/card/results";
+@use "layout/header";
