--- a/scss/components/_input.scss
+++ b/scss/components/_input.scss
@@ -74,6 +74,8 @@ input::placeholder {
 
 .tipButtons__input {
 
+  @include button;
+
   /* Color */
   background-color: $light-grayish-cyan-2;
   color: $very-dark-cyan;
