--- a/scss/layout/_header.scss
+++ b/scss/layout/_header.scss
@@ -8,9 +8,13 @@
 
   /* Font */
   font-size: $text-xs;
+  font-weight: bold;
 
   /* Spacing */
   margin-bottom: $space-xs;
+
+  /* Position */
+  display: inline-block;
 
 }
 
