Number input arrows removed from Mozilla

--- a/main.css
+++ b/main.css
@@ -171,6 +171,8 @@ img {
 input::-webkit-outer-spin-button,
 input::-webkit-inner-spin-button {
   -webkit-appearance: none;
+  -moz-appearance: textfield;
+  margin: 0;
 }
 
 input:focus {
