--- a/scss/components/_input.scss
+++ b/scss/components/_input.scss
@@ -3,6 +3,8 @@
 input::-webkit-outer-spin-button,
 input::-webkit-inner-spin-button {
   -webkit-appearance: none;
+  -moz-appearance: textfield;
+  margin: 0;
 }
 
 
