--- a/main.css
+++ b/main.css
@@ -171,8 +171,10 @@ img {
 input::-webkit-outer-spin-button,
 input::-webkit-inner-spin-button {
   -webkit-appearance: none;
+}
+
+input[type=number] {
   -moz-appearance: textfield;
-  margin: 0;
 }
 
 input:focus {
@@ -211,8 +213,6 @@ input::placeholder {
   border-radius: 8px;
   /* Position */
   text-align: right;
-  /* Other */
-  -moz-appearance: textfield;
 }
 
 .inputArea__icon {
