--- a/scss/components/_input.scss
+++ b/scss/components/_input.scss
@@ -3,8 +3,10 @@
 input::-webkit-outer-spin-button,
 input::-webkit-inner-spin-button {
   -webkit-appearance: none;
+}
+
+input[type=number]{
   -moz-appearance: textfield;
-  margin: 0;
 }
 
 
@@ -56,10 +58,6 @@ input::placeholder {
 
   /* Position */
   text-align: right;
-
-  /* Other */
-  -moz-appearance: textfield;
-
 }
 
 
