--- a/main.css
+++ b/main.css
@@ -221,6 +221,8 @@ input::placeholder {
   top: 50%;
   left: 12px;
   transform: translateY(-50%);
+  /* Color */
+  color: #7f9c9f;
 }
 
 .header {
