--- a/src/scss/layout/_header.scss
+++ b/src/scss/layout/_header.scss
@@ -81,6 +81,36 @@
 }
 
 
+.header--extraInfoBillCurrency {
+  display: none;
+  background-color: $light-grayish-cyan-2;
+  text-align: center;
+  opacity: 1;
+  color: $very-dark-cyan;
+  border-radius: $space-md $space-md $space-md 0;
+  position: absolute;
+  bottom: 90%;
+  min-width: 150px;
+  padding: 12px;
+  z-index: 1;
+}
+
+
+.header--extraInfoUserCurrency {
+  display: none;
+  background-color: $light-grayish-cyan-2;
+  text-align: center;
+  opacity: 1;
+  color: $very-dark-cyan;
+  border-radius: $space-md $space-md 0 $space-md;
+  position: absolute;
+  bottom: 90%;
+  transform: translateX(-115%);
+  min-width: 150px;
+  padding: 12px;
+  z-index: 1;
+}
+
 .article__bill .header--warningInfo,
 .article__numberOfPeople .header--warningInfo {
   top: 96px;
