--- a/src/scss/layout/_header.scss
+++ b/src/scss/layout/_header.scss
@@ -90,7 +90,7 @@
   border-radius: $space-md $space-md $space-md 0;
   position: absolute;
   bottom: 90%;
-  min-width: 150px;
+  min-width: 135px;
   padding: 12px;
   z-index: 1;
 }
@@ -102,13 +102,21 @@
   text-align: center;
   opacity: 1;
   color: $very-dark-cyan;
-  border-radius: $space-md $space-md 0 $space-md;
+  border-radius: $space-md $space-md $space-md 0;
   position: absolute;
   bottom: 90%;
-  transform: translateX(-115%);
-  min-width: 150px;
+  min-width: 135px;
   padding: 12px;
   z-index: 1;
+}
+
+@media (min-width: 500px){
+
+  .header--extraInfoUserCurrency {
+    transform: translateX(-115%);
+    border-radius: $space-md $space-md 0 $space-md;
+  }
+
 }
 
 .article__bill .header--warningInfo,
