--- a/src/scss/layout/card/_results.scss
+++ b/src/scss/layout/card/_results.scss
@@ -5,7 +5,7 @@
   /* Flexbox */
   display: flex;
   justify-content: space-between;
-  align-items: flex-start;
+  align-items: center;
   gap: $space-sm;
 
   /* Spacing */
