--- a/src/scss/components/_input.scss
+++ b/src/scss/components/_input.scss
@@ -88,8 +88,11 @@ input::placeholder {
 
 .fa-circle-question {
 
+  /* Color */
   color: $white;
   opacity: 0.8;
+
+  /* Position */
   position: relative;
   top: 3px;
 
