Title font size increased

--- a/src/scss/_global.scss
+++ b/src/scss/_global.scss
@@ -58,7 +58,7 @@ img {
   color: $very-dark-cyan;
 
   /* Font */
-  font-size: $text-lg;
+  font-size: $text-xl;
   letter-spacing: $space-sm;
 
   /* Spacing */
