Reducing results font size when layout breaks

--- a/src/scss/layout/card/_results.scss
+++ b/src/scss/layout/card/_results.scss
@@ -6,7 +6,7 @@
   display: flex;
   justify-content: space-between;
   align-items: center;
-  gap: $space-sm;
+  gap: $space-md;
 
   /* Spacing */
   margin-bottom: $space-md-plus;
