--- a/src/scss/layout/card/_results.scss
+++ b/src/scss/layout/card/_results.scss
@@ -6,7 +6,7 @@
   display: flex;
   justify-content: space-between;
   align-items: center;
-  gap: $space-md;
+  gap: $space-sm-plus;
 
   /* Spacing */
   margin-bottom: $space-md-plus;
@@ -49,20 +49,6 @@
 }
 
 @media (min-width: 500px) {
-
-  .results__currency {
-    flex-direction: row;
-  }
-
-
-  .results__value {
-    font-size: $text-xl;
-  }
-
-}
-
-
-@media (min-width: 700px) {
 
   .results__currency {
     flex-direction: row;
