--- a/src/scss/components/_button.scss
+++ b/src/scss/components/_button.scss
@@ -66,7 +66,25 @@
   margin-top: $space-md;
 
   /* Animation */
-  transition: all 200ms;
+  //transition: all 200ms;
+  animation-duration: 5.5s;
+  animation-name: fadein1;
+
+}
+
+@keyframes fadein1 {
+
+  from {
+    opacity: 0;
+  }
+
+  60% {
+    opacity: 0;
+  }
+
+  to {
+    opacity: 100%;
+  }
 
 }
 
